--- a/business_insights.ipynb
+++ b/business_insights.ipynb
@@ -23,7 +23,9 @@
  "cells": [
   {
    "source": [
-    "The purpose of this notebook is to summarize the findings from `eda_notebook.ipynb` that address our business questions. The final modeling process can be found in `final_mode.ipynb`."
+    "# Business Insights\n",
+    "\n",
+    "The purpose of this notebook is to summarize the findings from `eda_notebook.ipynb` that address our business questions. The final modeling process can be found in `final_model.ipynb`."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -57,7 +59,7 @@
   },
   {
    "source": [
-    "## How does the number of visitors differ each month?"
+    "## 1. How does the number of visitors differ each month?"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -90,7 +92,7 @@
   },
   {
    "source": [
-    "## Do returning visitors have a higher revenue than one-time visitors?"
+    "## 2. Do returning visitors have a higher revenue than one-time visitors?"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -131,7 +133,7 @@
   },
   {
    "source": [
-    "## What feature has the highest influence on revenue?"
+    "## 3. What feature has the highest influence on revenue?"
    ],
    "cell_type": "markdown",
    "metadata": {}
