--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "source": [
-    "# E-commerce Customer Purchase Intentions"
+    "# Online Shopper Intentions"
    ],
    "cell_type": "markdown",
    "metadata": {}
